refactor: Common static analysis issues
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.staticanalysis.CommonStaticAnalysis?organizationId=T3BlbiBMaWJlcnR5

Co-authored-by: Moderne <team@moderne.io>