@@ -98,7 +98,7 @@ public class HoldingDataBean implements Serializable {
     }
 
     public static HoldingDataBean getRandomInstance() {
-        return new HoldingDataBean(new Integer(TradeConfig.rndInt(100000)), // holdingID
+        return new HoldingDataBean(Integer.valueOf(TradeConfig.rndInt(100000)), // holdingID
                 TradeConfig.rndQuantity(), // quantity
                 TradeConfig.rndBigDecimal(1000.0f), // purchasePrice
                 new java.util.Date(TradeConfig.rndInt(Integer.MAX_VALUE)), // purchaseDate
@@ -183,7 +183,7 @@ public class HoldingDataBean implements Serializable {
     @Override
     public int hashCode() {
         int hash = 0;
-        hash += (this.holdingID != null ? this.holdingID.hashCode() : 0);
+        hash += this.holdingID != null ? this.holdingID.hashCode() : 0;
         return hash;
     }
 
@@ -195,10 +195,6 @@ public class HoldingDataBean implements Serializable {
         }
         HoldingDataBean other = (HoldingDataBean) object;
 
-        if (this.holdingID != other.holdingID && (this.holdingID == null || !this.holdingID.equals(other.holdingID))) {
-            return false;
-        }
-
-        return true;
+      return !(this.holdingID != other.holdingID && (this.holdingID == null || !this.holdingID.equals(other.holdingID)));
     }
 }
